# rust-example

./: Cargo.toml  Makefile
src/: main.rs
