[workspace.package]
rust-version = "1.88"
homepage = "https://github.com/js2me/rust-example"
documentation = "https://github.com/js2me/rust-example"
repository = "https://github.com/js2me/rust-example"
authors = ["Sergey Volkov <js2me@outlook.com>"]
license = "MIT"

[package]
name = "test-app"
version = "0.1.0"
edition = "2024"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]

[dev-dependencies.cargo-husky]
version = "1"
default-features = false
features = ["precommit-hook", "run-cargo-test", "run-cargo-clippy"]